Changes to be committed: 	new file:   zimlets-deployed/com_zextras_client/com_zextras_client_en_GB.properties 	new file:   zimlets-deployed/com_zextras_drive_open/com_zextras_drive_open_en_GB.properties 	new file:   zimlets-deployed/com_zextras_zextras/com_zextras_zextras_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_adminversioncheck/com_zimbra_adminversioncheck_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_archive/com_zimbra_archive_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_backuprestore/com_zimbra_backuprestore_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_bulkprovision/com_zimbra_bulkprovision_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_cert_manager/com_zimbra_cert_manager_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_click2call_cisco/com_zimbra_click2call_cisco_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_click2call_mitel/com_zimbra_click2call_mitel_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_clientuploader/com_zimbra_clientuploader_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_connect_classic/com_zimbra_connect_classic_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_convertd/com_zimbra_convertd_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_delegatedadmin/com_zimbra_delegatedadmin_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_email/com_zimbra_email_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_hsm/com_zimbra_hsm_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_license/com_zimbra_license_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_mobilesync/com_zimbra_mobilesync_en_GB.properties 	modified:   zimlets-deployed/com_zimbra_proxy_config/com_zimbra_proxy_config_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_securemail/com_zimbra_securemail_en_GB.properties 	new file:   zimlets-deployed/com_zimbra_smime/com_zimbra_smime_en_GB.properties 	new file:   zimlets-deployed/com_zimb

--- a/zimlets-deployed/com_zimbra_cert_manager/com_zimbra_cert_manager_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_cert_manager/com_zimbra_cert_manager_en_GB.properties
@@ -1,7 +1,7 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Server
-# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2016 Synacor, Inc.
+# Copyright (C) 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -26,10 +26,10 @@ CERT_WIZARD_TABT_downloadCSR = Download the Certificate Signing Request
 CERT_WIZARD_TABT_reviewCSR = Review the Certificate Signing Request
 CERT_WIZARD_TABT_selectServer = Select the Target Server 
 CERT_INFO_CN = Common Name:  
-CERT_INFO_OU = Organisational Unit:  
+CERT_INFO_OU = Organizational Unit:  
 CERT_INFO_C = Country Name: 
 CERT_INFO_ST = State/Province:  
-CERT_INFO_O = Organisation Name:  
+CERT_INFO_O = Organization Name:  
 CERT_INFO_L = City:  
 CERT_INFO_SubjectAltName = Subject Alternative Name: 
 NAD_Remove = Remove
@@ -38,10 +38,10 @@ NAD_Add = Add
 CERT_INFO_SUBJECT = Subject: 
 CERT_INFO_ISSUER = Issuer:
 CERT_INFO_VALIDATION_DAYS = Validation Days: 
-CERT_select_server = Please select the target server:
-CERT_select_option = Please choose one of the following options: 
+CERT_select_server = Please select the target server :
+CERT_select_option= Please choose one of the following options : 
 CERT_self_signed = Install the self-signed certificate 
-CERT_gen_csr = Generate the CSR for the commercial certificate authoriser 
+CERT_gen_csr = Generate the CSR for the commercial certificate authorizer 
 CERT_comm_signed = Install the commercially signed certificate 
 CERT_uploadTitle = Please upload the following files from your CA
 CERT_upload_comm_cert = Certificate: 
@@ -62,24 +62,24 @@ CERT_INSTALL_STATUS_0 = Your certificate was installed successfully. You must re
 CERT_INSTALL_STATUS_1 = Your certificate was not installed due to the error  
 CERT_INSTALL_BUTTON_text = Install 
 
-UploadCertErrorMsg = Upload status {0}: failed to upload the certificate files at this time. 
+UploadCertErrorMsg = Upload status {0}: failed to upload the certificate files at this moment. 
 genCSRError = There was an error generating the CSR. 
 certFile=Upload proxy CA file:
-certFileNameError = Invalid file name. Use browse button to select a valid licence file. 
+certFileNameError = Invalid file name. Use browse button to select a valid license file. 
 noCertFileError = You must choose a certificate file.
 noRootCAError = You must choose a root CA. If you don\u2019t have one, please contact your CA.
 certTypeError = Please select the certificate type. 
 invalidContentType = Invalid Certificate Content Type for uploaded file
 dupFileNameError = Duplicate filename is not allowed: 
 
-CSR_EXISTS_WARNING = The following CSR already exists. 
+CSR_EXISTS_WARNING = The following CSR exists already. 
 CSR_NON_EXISTS_WARNING = No valid CSR was found. 
 FORCE_NEW_CSR = Replace the existing CSR 
-CSR_NON_EXISTS_MSG = To install a commercially signed certificate, you must create the CSR first. Please go back to choose Generate the CSR for the commercial certificate authoriser option to create the CSR. 
+CSR_NON_EXISTS_MSG = To install a commercially signed certificate, you must create the CSR first. Please go back to choose \Generate the CSR for the commerical certificate authorizer\ option to create the CSR. 
 
-CSR_download_msg_1 = In order to obtain a commercially signed certificate, you must download the generated CSR and submit it to your commercial certificate authoriser. Once you get the certificate, please restart the Certificate Installation Wizard and choose the option Install the commercially signed certificate to complete the certificate installation.
+CSR_download_msg_1 = In order to obtain a commercially signed certificate, you must download the generated CSR and submit it to your commercial certificate authorizer. Once you get the certificate, please restart the \Certificate Installation Wizard\ and choose the option \Install the commercially signed certificate\ to complete the certificate installation.
 CSR_download_msg_2 = Download the CSR 
-CSR_REVIEW = Please review the current CSR information, then click next to upload your certificate signed by the commercial certificate authoriser.
+CSR_REVIEW = Please review the current CSR information, then click next to upload your certificate signed by the commercial certificate authorizer.
 TBB_launch_cert_wizard = Install Certificate 
 TBB_launch_cert_wizard_tt = Launch the certificate installation wizard 
 TBB_view_cert = View Certificate
@@ -116,8 +116,8 @@ CERT_UploadButton =  Upload
 noKeyFileError = You must choose a key file.
 BUSY_UPLOAD_CERTKEY = Uploading the certificate or key file ...
 
-ExpiredCertMsg = {0} certificate(s) has/have expired. 
-ExpiringCertMsg = {0} certificate(s) will soon expire.
-SingleExpDate = The expiry date is {0}.
-MultiExpDate = The earliest expiry date is {0}.
+ExpiredCertMsg = {0} certificate(s) has been expired. 
+ExpiringCertMsg = {0} certificate(s) will be expired soon.
+SingleExpDate = The expiration date is {0}.
+MultiExpDate = The earliest expiration date is {0}.
 ManageCert = Manage Certificates...
