--- a/zimlets-deployed/com_zimbra_clientuploader/com_zimbra_clientuploader_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_clientuploader/com_zimbra_clientuploader_en_GB.properties
@@ -1,12 +1,12 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Server
-# Copyright (C) 2012, 2013, 2014, 2016 Synacor, Inc.
-#
+# Copyright (C) 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
+# 
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
 # version 2 of the License.
-#
+# 
 # This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 # See the GNU General Public License for more details.
@@ -24,7 +24,7 @@ Client_upload_title = Client Software Upload
 Client_upload_desc = Please select the latest version of the client software and click upload.
 Client_upload_in_process = The uploading may takes several minutes. If you leave this view, a popup will inform you once receive the response.
 Client_upload_succeeded = The client software has been successfully uploaded to server.
-Client_upload_failed = Failed to upload the client software. You may try again later.
+Client_upload_failed = Failed to upload the client software, you may try it later.
 Client_upload_too_large = The size of client software exceeds max allowed size.
 Client_upload_update_failed = The client software has been uploaded, but failed run the script to update download page.
 Client_upload_no_permission = Upload failed. No permission to upload client software.
