--- a/zimlets-deployed/com_zimbra_proxy_config/com_zimbra_proxy_config_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_proxy_config/com_zimbra_proxy_config_en_GB.properties
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Server
-# Copyright (C) 2012, 2013, 2014, 2016 Synacor, Inc.
+# Copyright (C) 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -52,7 +52,7 @@ LBL_ProxyDisableMailProxy = Disable mail proxy:
 LBL_ProxyAuthWaitTime = Time to wait when login fails(sec):
 LBL_ProxyImapProxyPort = Proxy IMAP port:
 LBL_ProxyImapUpPort = Upstream IMAP port:
-LBL_ProxyImapPort = IMAP Port:
+LBL_ProxyImapPort = IMAP port:
 LBL_ProxyPop3ProxyPort = Proxy POP3 port:
 LBL_ProxyPop3UpPort = Upstream POP3 port:
 LBL_ProxyPop3Port = POP3 port:
@@ -102,6 +102,6 @@ LBL_ProxyWizardStepMailProxy = Mail Proxy
 LBL_ProxyWizardStepAdvanced = Advanced
 LBL_ProxyWizardStepFinish = Complete
 
-MSG_GenConfigPerVirtualHostname = Generating proxy configurations for different virtual host names is required if you want each virtual host name to have a distinctive configuration (e.g. SSL certificates or client certificate CA).
+MSG_GenConfigPerVirtualHostname = Generating proxy configurations for different virtual host names is required if you want each virtual host name has distinctive configuration (e.g. SSL certificates or client certificate CA).
 MSG_ReverseProxyAdminIPAddress = Only the proxies whose IP addresses exist in the below list are allowed to handle GSSAPI and client certification authentication.
 MSG_NeedProxyInstalledAndEnabled = Proxy is not available for configuration unless it\u2019s installed and enabled in the current server.
