--- a/zimlets-deployed/com_zimbra_adminversioncheck/com_zimbra_adminversioncheck_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_adminversioncheck/com_zimbra_adminversioncheck_en_GB.properties
@@ -1,7 +1,7 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Server
-# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2016 Synacor, Inc.
+# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -39,17 +39,17 @@ LBL_zimbraVersionCheckLastSuccess = Last successful check for updates:
 WARNING_LAST_ATTEMPT_FAILED = Warning! Last attempt to check for updates failed!
 WARNING_CURRENT_ATTEMPT_FAILED = Failed to check for updates! Please check the server or related configuration tab!
 Critical = Critical
-NotCritical = Not Critical
-ERROR_WRONG_ACCOUNT = The account {0} specified in the \u201cSend notification email from\u201d setting does not exist.
+NotCritical = Non-critical
+ERROR_WRONG_ACCOUNT = The account {0} specified in "Send notification email from" setting does not exist.
 ERROR_UPDATES_NOT_CONFIGURED = Updates are not properly configured! Please the check related configuration tab.
 OVP_versionCheck = Software Updates
 UI_Comp_versionCheck = Software Updates
 Never = Never
 CheckNow = Check now
 CheckNow_tt = Check for updates now
-saveChangesFirst = Please save the changes first!
-Alert_Crontab = If you wish to check for updates more often than every two hours, you have to adjust the cron task for"/opt/zimbra/libexec/zmcheckversion"  that runs on {0}.
+saveChangesFirst = Please first save the changes!
+Alert_Crontab = If you wish to check for updates more often then every two hours, you have to adjust the cron task for "/opt/zimbra/libexec/zmcheckversion" that runs on {0}.
 NoteSendingNotificationFromAddress = If you want the notifications to be sent from an email address other then your default system administrator\u2019s email, please make sure that \
-    this address is included in zimbraAllowFromAddress attribute of the system administrator\u2018s account or zimbraAllowAnyFromAddress attribute of administrator\u2019s account is set to TRUE.
+this address is included in zimbraAllowFromAddress attribute of the system administrator\u2018s account or zimbraAllowAnyFromAddress attribute of administrator\u2019s account is set to TRUE.
 LBL_ViewUpdate = Configure Updates...
 LBL_GO_TO_DOWNLOAD_URL = Download Now...
