--- a/zimlets-deployed/com_zimbra_bulkprovision/com_zimbra_bulkprovision_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_bulkprovision/com_zimbra_bulkprovision_en_GB.properties
@@ -1,7 +1,7 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Server
-# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2016 Synacor, Inc.
+# Copyright (C) 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -38,27 +38,40 @@ MIG_Wizard_ADOptions = Active Directory information
 
 CSV_Upload_file = CSV File:
 XML_Upload_file = XML File:
-CSV_uploadNotes = Note: Each row in the CSV is an account entry. Each account entry consists of three columns separated by a comma (,) in the order of  account name, account display name and password. <p> A sample entry will look like: user@domain.tld, displayname, password </p> <p> If there is no password provided, a random password will be generated for the account. And the user will be prompted to change the password upon first login. </p>
+CSV_uploadNotes = Note: Each row in the CSV is an account entry. Each account entry consists of three columns separated \
+  by comma (,) in the order of  account name, account display name and password. \
+  <p> A sample entry will look like: \
+  user@domain.tld, displayname, password </p> \
+  <p> If there is no password provided, a random password will be generated for the account. \
+  And user will be prompted to change the password upon first login. </p>
 
 CSV_uploadTitle = Please upload the CSV file containing the bulk accounts information.
-CSV_uploadNotes_new = Note: Each row in the CSV is an account entry. Each account entry consists of six columns separated by a comma (,) in the order of email address, display name, first name, last name, password and TRUE or FALSE. <br/>TRUE if you wish to prompt the user to change the password after first login, otherwise \u2013 FALSE.<br/><p> A sample entry will look like: <br/> john.smith@company.com, John H. Smith, John, Smith, password000, TRUE <br/>or like: <br/>jane.smith@company.com, Jane M. Smith, Jane, Smith, password111, FALSE </p>
+CSV_uploadNotes_new = Note: Each row in the CSV is an account entry. Each account entry consists of six columns separated \
+  by comma (,) in the order of email address, display name, first name, last name, password and TRUE or FALSE <br/>\
+  TRUE if you wish to prompt the user to change the password after first login, otherwise - FALSE.<br/>\
+  <p> A sample entry will look like: <br/> \
+  john.smith@company.com, John H. Smith, John, Smith, password000, TRUE <br/>\
+  or like: <br/>\
+  jane.smith@company.com, Jane M. Smith, Jane, Smith, password111, FALSE </p>
 
-XML_uploadNotes = Please refer to the documentation for a description of the XML format
+XML_uploadNotes = Please refer to documentation for the description of XML format
     
 CKB_mustChangePasswd = User must change password upon first login
 
-BP_wizard_upload_status = Your CSV file is uploaded successfully, click \u201cNext\u201d to provision the accounts.
-BP_wizard_csv_invalid = Your uploaded CSV file contains fatal errors, please fix them and upload the file again.
+BP_wizard_upload_status = Your CSV file is uploaded successfully, click "Next" to provision the accounts.
+BP_wizard_csv_invalid = Your uploaded CSV file contains fatal errors, \
+  please fix them and upload the file again.
 error_no_bulk_file_specified = Please select a valid file to be uploaded.
 error_upload_bulk_no_aid = Failed to upload the file. No attachment ID is returned.
 error_upload_bulk = Failed to upload the file, status {0}. Please try again.
 error_no_csv_file_specified = Please select a valid CSV file to be uploaded.
 error_upload_csv = Upload the CSV file failed, status {0}. Please try again.    
 error_upload_csv_no_aid = Upload the CSV file failed. No attachment ID is returned.
-error_no_aid = Missing attachment id
-error_unmatching_aid = Uploaded and returned attachment ID do not match.
+error_no_aid = Missing attachment id.
+error_unmatching_aid = Uploaded and returned attachment ID don\u2019t match.
 
-summary_download = Accounts created successfully. You may click the following link to download the bulk provisioning report.
+summary_download = Accounts are created successfully. You may click the following link to download the \
+  bulk provisioning report.
 download_csv = Download CSV report
 no_accounts = No bulk provision accounts
 ALV_Password_col = Password
@@ -115,27 +128,27 @@ ActionGenerateBulkCSV = Export accounts from external directory into a CSV file
 GeneratedBulkProvisionFileLink = Download file
 DownloadMigrationXML = Download XML file for MS Exchange migration utility
 DownloadMigrationWizard = Download MS Exchange migration utility
-ClickToDownloadGeneratedFile = Click the link below to download the file.
+ClickToDownloadGeneratedFile = Click the link below to download the file
 UploadFileTitle = Upload the {0} file containing the bulk accounts information
-ADInfoStepNote = Please enter the details for connecting to your Active Directory server.
+ADInfoStepNote = Please enter the details for connecting to your Active Directory server
 ADServerName = Server Name
 ADServerPort = Port
 ADUseSSL = Sse SSL
 LDAP_GALServerName = Server Name
 LDAP_GALServerPort = Port
 LDAP_GALUseSSL = Use SSL
-LdapInfoStepNote = Please enter the details for connecting to your AD or LDAP server.
+LdapInfoStepNote = Please enter the details for connecting to your AD or LDAP server
 LDAPMaxResults = Maximum records to fetch (0 for unlimited):
 SourceDomainName = Source domain:
 TargetDomainName = Target domain:
-ProvOptionsNote = Please enter common options to be used for multiple accounts during provisioning.
+ProvOptionsNote = Please enter common options to be used for multiple accounts during provisioning
 GenerateRandomPassword = Generate random password for each account (recommended)
 RevGenerateRandomPassword = Generate random password:
 UseSamePassword = Use same password for all new accounts
 PasswordToUse = Password to use:
 PasswordToUseConfirm = Confirm password:
 GeneratedPasswordLength = Length of generated password:
-RequireChangePassword = Require users to change password after first login:
+RequireChangePassword = Require users to change password after first login
 RevRequireChangePassword = Require users to change password:
 ProvisioningStatusIdle = Idle
 ProvisioningStatusStarted = Started
@@ -175,10 +188,10 @@ MigInvalidSSLOk = Ignore invalid SSL certificate
 RevMigInvalidSSLOk = Ignore invalid SSL certificate:
 RevMigIgnorePreviouslyImported = Ignore previously imported emails:
 MigIgnorePreviouslyImported = Ignore previously imported emails
-RevMigImportJunk = Import \u201cjunk\u201d folder:
-MigImportJunk = Import \u201cjunk\u201d folder
-MigImportDeletedItems = Import deleted items:
-RevMigImportDeletedItems = Import deleted items
+RevMigImportJunk = Import "junk" folder:
+MigImportJunk = Import "junk" folder
+MigImportDeletedItems = Import deleted items
+RevMigImportDeletedItems = Import deleted items:
 RevMigImportCalendar = Import calendar:
 MigImportCalendar = Import calendar
 RevMigImportTasks = Import tasks:
@@ -191,27 +204,34 @@ LDAPUrl = LDAP URL:
 A2_MapiProfile = MAPI profile name:
 A2_MapiServer = MAPI server name:
 A2_MapiLogonUserDN = MAPI logon user DN:
-ZimbraAdminPasswordNote = Zimbra admin login and password will be used by MS Exchange migration utility to create mailboxes in ZCS.
-MAPIINfoNote = MAPI profile will be used to connect to Microsoft Exchange server to collect data.
+ZimbraAdminPasswordNote = Zimbra admin login and password will be used by MS Exchange migration utility to create mailboxes in ZCS
+MAPIINfoNote = MAPI profile will be used to connect to Microsoft Exchange server to collect data
 A2_ZimbraAdminLogin = Zimbra admin login:
 A2_ZimbraAdminPassword = Zimbra admin password:
 A2_ZimbraAdminPasswordConfirm = Confirm password:
 RevA2_provisionUsers = Create user accounts in ZCS:
 A2_provisionUsers = Create user accounts in ZCS 
 A2_createDomains = Automatically create missing domains
-generateProvFileNote = You can also download a list of accounts from an external directory (LDAP or AD) as a single XML or CSV file. You can customise the generated file and use it with this wizard to import the accounts into your Zimbra server. <br/>Select one of the following two options to download a generated file:
+generateProvFileNote = You can also download a list of accounts from an external directory (LDAP or AD) as a single XML or CSV file. \
+You can customize the generated file and use it with this wizard to import the accounts into your Zimbra server. <br/>\
+Select one of the following two options to download a generated file:
 A2_generateProvFileXML = Generate XML file
 A2_generateProvFileCSV = Generate CSV file 
 ReviewDomainCount = Number of domains found:
 ReviewSkippedDomainCount = Domains already in Zimbra:
 ReviewAccountCount = Number of accounts found:
 ReviewSkippedAccountCount = Accounts already in Zimbra:
-ReviewStepNote = Please review the options for migration from MS Exchange server. Press \u201cPrevious\u201d to make changes. Press \u201cNext\u201d to download the MS Exchange migration utility and the XML file with settings for the utility.
-ExchMigrationWizardIntro = In the next several steps this wizard will prompt you for information about your Exchange and Active Directory servers, it will generate an XML file with migration settings and let you download MS Exchange migration utility application.<br/>Make sure to read <a href="/zimbraAdmin/adminhelp/pdf/MigrationWizard.pdf" target="_blank">Migration Planning Guide</a> before continuing with migration.
-AccountImportReviewNote = Please review the options for importing accounts. Press "Previous" to make changes. Press "Next" to start importing accounts.
-DataImportWizardOverview = This wizard will guide you through importing data from your old server.  Two main steps of migration process are: \
-    <ol><li>Provisioning accounts</li><li>Importing mailboxes</li></ol>\
-    Two currently available options for provisioning accounts are: <ol><li>Upload the list of accounts in an XML file</li><li> Import account list from a directory server</li></ol>
+ReviewStepNote = Please review the options for migration from MS Exchange server.\
+ Press "Previous" to make changes.\
+ Press "Next" to download the MS Exchange migration utility and the XML file with settings for the utility.
+ExchMigrationWizardIntro = On the next several steps of this wizard will prompt you for information about your Exchange and Active Directory servers, it will generate an XML file with migration settings and let you download MS Exchange migration utility application.<br/>\
+Make sure to read <a href="/zimbraAdmin/adminhelp/pdf/MigrationWizard.pdf" target="_blank">Migration Planning Guide</a> before continuing with migration.
+AccountImportReviewNote = Please review the options for importing accounts.\
+Press "Previous" to make changes.\
+ Press "Next" to start importing accounts.
+DataImportWizardOverview = This wizard will guide you through importing data from your old server. \ Two main steps of migration process are: \
+<ol><li>Provisioning accounts</li><li>Importing mailboxes</li></ol>\
+Two currently available options for provisioning accounts are: <ol><li>Upload the list of accounts in an XML file</li><li> Import account list from a directory server</li></ol>
 SourceServerType = Type of mail server:
 AccountListType = My account records are in:
 AccountListTypeLDAP = External LDAP Directory
