--- a/zimlets-deployed/com_zimbra_email/com_zimbra_email_en_GB.properties
+++ b/zimlets-deployed/com_zimbra_email/com_zimbra_email_en_GB.properties
@@ -1,7 +1,7 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Zimlets
-# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
+# Copyright (C) 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -29,7 +29,7 @@ MEDIUM = Medium
 LARGE = Large
 XL = XL
 2XL = 2XL
-selectToolTipSize = Please select tool-tip\u2019s size: 
+selectToolTipSize = Please select tool-tip\u2019s size:
 rightClickForMoreOptions = Right click for more options
 contact = Contact
 close = Close
@@ -46,6 +46,7 @@ msg_dnd = Do not disturb
 msg_onthephone = On the phone
 msg_vacation = Vacation
 msg_unknown = Unknown
+# {0}:workStreet   {1}:workCity  {2}:workState  {3}:workPostalCode
+postalAddress = {0} {1} {2} {3}
 # Don't translate jobTitleDepartmentCompany
 jobTitleDepartmentCompany = jobTitle,department,company
-
